Fix text spacing for header navigation, header, and footer

--- a/css/index.css
+++ b/css/index.css
@@ -148,13 +148,19 @@ body .container header .title h1 {
   font-size: 4rem;
   font-weight: bold;
   background-color: rgba(255, 255, 255, 0.7);
-  padding: 1rem;
+  padding: 1rem 0;
+  padding-left: 2rem;
 }
 /* end body */
+.nav-links {
+  display: flex;
+  flex-direction: row;
+  /*-- end ul --*/
+}
 .nav-links ul {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   background-color: #0D111F;
 }
 .nav-links ul li {
@@ -168,12 +174,25 @@ body .container header .title h1 {
 .nav-links ul li:hover a {
   text-decoration-line: line-through;
 }
+.nav-links ul:first-child {
+  width: 70%;
+}
+.nav-links ul:first-child li {
+  margin-left: 2rem;
+}
+.nav-links ul:last-child {
+  width: 30%;
+}
+.nav-links ul:last-child li {
+  margin-right: 2rem;
+}
 footer {
   display: flex;
   flex-direction: column;
   background-color: rgba(13, 17, 31, 0.7);
   color: silver;
-  padding: 0.75rem 1rem;
+  padding: 0.75rem 0;
+  padding-right: 2rem;
   text-align: right;
 }
 footer a {
