--- a/less/footer.less
+++ b/less/footer.less
@@ -3,7 +3,8 @@ footer {
     flex-direction: column;
     background-color: rgba(13, 17, 31, .7);
     color: silver;
-    padding: .75rem 1rem;;
+    padding: .75rem 0;
+    padding-right: @space;
     text-align: right;
 
     a {
