--- a/less/global.less
+++ b/less/global.less
@@ -16,7 +16,8 @@ body {
                     font-size: 4rem;
                     font-weight: bold;
                     background-color: rgba(255, 255, 255, .7);
-                    padding: 1rem;
+                    padding: 1rem 0;
+                    padding-left: @space;
                 }
             }
         } /* end header */
