--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,13 @@
-@blue: #0A2B9F;
+//colors
+
+@blue: #1233B7;;
 @midnight-blue: #1A2246;
 @steel-blue: #4B5CA8;
 @rosy-brown: #AA6C5A;
 @sienna:  #733E37;
 @dark-slate-gray: #0D111F;
 @silver: #E3E3E3;
+
+//sizing
+
+@space: 2rem;
